Production-ready: Configured for Railway deployment

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,14 @@ htmlcov/
 # Static & media files (optional – if collected/generated)
 staticfiles/
 media/
+
+# Deployment
+.env.prod
+*.env.local
+
+# Database (PostgreSQL backups)
+*.dump
+*.backup
+
+# Redis
+dump.rdb
