--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,5 @@ pyOpenSSL==25.0.0
 djangorestframework-simplejwt==5.5.0
 PyJWT==2.9.0
 
+### Development ###
+python-dotenv==1.0.1  # Can be removed in production
